js/js.translator/testData/incremental/invalidation/exportsThroughInlineFunction/lib1/l2.1.kt
inline fun lib1Foo() = foo()
